--- a/src/components/Navigation/SideToolbar/SideToolbar.css
+++ b/src/components/Navigation/SideToolbar/SideToolbar.css
@@ -9,6 +9,7 @@
   background-color: rgb(74, 74, 74);
   padding: 55px 16px;
   box-sizing: border-box;
+  box-shadow: 2px 5px 10px rgba(56,56,56,.562);
 }
 
 @media (max-width: 499px) {
