--- a/src/components/Navigation/ToolbarUser/ToolbarUser.css
+++ b/src/components/Navigation/ToolbarUser/ToolbarUser.css
@@ -1,22 +1,26 @@
 .ToolbarUser {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   position: absolute;
   bottom: 0;
   left: 0;
-  margin-left: 20px;
+  margin: 20px;
   margin-bottom: 30px;
+  width: 80%;
+  align-items: center;
 }
 
 .ToolbarUser div {
   box-sizing: border-box;
   display: block;
   padding: 0 6px;
-  color: white;
-  font-size: 18px;
+  color: rgb(238, 237, 237);
+  font-size: 16px;
   font-weight: bold;
+  text-align: center;
 }
 
 .ToolbarUser img {
   height: 20px;
+  padding: 5px;
 }
