--- a/src/components/UI/Line/Line.css
+++ b/src/components/UI/Line/Line.css
@@ -1,10 +1,8 @@
 .Line {
   margin: auto;
   width: 80%;
-  /* height: 100%; */
   display: flex;
   flex-flow: column;
-  /* justify-content: space-around; */
   align-items: center;
   padding: 30px 0;
   box-sizing: border-box;
@@ -14,4 +12,17 @@
   width: 90%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.495);
+}
+
+.MainBody{
+  margin: 0;
+  align-items: baseline;
+  padding: 10px 0;
+  width: 100%;
+}
+
+.MainBody div{
+  background-color: #cacaca;
+  width: 100%;
+  height: 2px;
 }
