--- a/src/components/LocationDetails/LocationDetails.css
+++ b/src/components/LocationDetails/LocationDetails.css
@@ -8,11 +8,10 @@
 .LocationDetails h1 {
   font-size: 25px;
   font-family: Circular-bold;
-  /* margin: auto; */
+  margin: auto;
 }
 
 .DetailsButton {
-  /* float: right; */
   position: absolute;
   margin-top: 80px;
   margin-right: 30px;
