--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
@@ -1,6 +1,9 @@
 .LocationDetailItem {
   padding: 10px;
-  flex: 40%;
+  /* display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; */
+  /* flex: 40%; */
 }
 
 .LocationDetailItem h2 {
@@ -17,7 +20,7 @@
   border: white solid 1px;
   border-radius: 3px;
   box-shadow: 0 0 1px #b8b8b8;
-  min-width: 220px;
+  min-width: 100%;
 }
 
 .LocationDetailItem input:focus{
