--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
@@ -1,7 +1,7 @@
 .LocationDetailItems {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
   /* width: 90%; */
 }
