Make Dialogue a component and button styling

--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,4 +1,4 @@
-.Button {
+/* .Button {
   border: none;
   color: whitesmoke;
   outline: none;
@@ -25,4 +25,40 @@
 
 .Edit:hover {
   background-color: #e97b40;
+} */
+
+
+.Button {
+  position: relative;
+  padding: 10px 30px;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: Circular-Bold;
+  color: white;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.Button:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: width 250ms ease;
+  z-index: 0;
+}
+.Button:hover:before {
+  width: 100%;
+}
+
+.Success {
+  margin-right: 5px;
+  background-color: #2ecc71;
+}
+.Danger {
+  background-color: #e74c3c;
 }
