--- a/src/containers/AdminPane/AdminPane.css
+++ b/src/containers/AdminPane/AdminPane.css
@@ -6,6 +6,11 @@
   border-radius: 10px;
   padding: 40px;
   color: #484848;
+  overflow: scroll;
+}
+
+.AdminPane::-webkit-scrollbar {
+  display: none;
 }
 
 @media (min-width: 500px) {
