--- a/src/components/Deals/Deal/Deal.css
+++ b/src/components/Deals/Deal/Deal.css
@@ -1,4 +1,4 @@
-.Time{
+.Time {
   font-family: Circular-bold;
   padding-bottom: 10px;
   border: none;
@@ -11,7 +11,7 @@
   font-size: 16px;
 }
 
-.Days{
+.Days {
   font-family: Circular-bold;
   padding-bottom: 10px;
   border: none;
@@ -24,7 +24,7 @@
   font-family: Circular-bold;
 }
 
-.DealItem{
+.DealItem {
   color: rgb(72, 72, 72);
   margin-top: 10px;
   margin-bottom: 10px;
@@ -33,32 +33,36 @@
   font-size: 20px;
 }
 
-.Deal{
+.Deal {
   color: rgb(72, 72, 72);
   padding-top: 20px;
   border-top: 1px solid rgb(202, 202, 202);
   margin-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 0px;
+  position: relative;
+}
+
+.Edit {
+  position: absolute;
+  top: 10px;
+  right: 0px; 
+  width: 30px;
 }
 
 @media screen and (max-width: 700px) {
-
-  .Deal{
-      padding-top: 10px;
+  .Deal {
+    padding-top: 10px;
   }
-
-  .Time{
-      font-size: 12px;
+  .Time {
+    font-size: 12px;
   }
-
-  .Days{
-      font-size: 12px;
+  .Days {
+    font-size: 12px;
   }
-
-  .DealItem{
-      font-size: 15px;
-      margin-top: 8px;
-      margin-bottom: 8px;
+  .DealItem {
+    font-size: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
   }
 }
