--- a/src/components/Deals/EditingDeal/EditingDeal.css
+++ b/src/components/Deals/EditingDeal/EditingDeal.css
@@ -11,15 +11,6 @@
   font-size: 26px;
 }
 
-.EditingDeal article {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
-  /* line-height: 1.75; */
-}
-
 .EditingDeal footer {
   position: relative;
   display: flex;
@@ -28,4 +19,29 @@
   width: 100%;
   margin: 0;
   padding: 10px 0 0;
+}
+
+.Times {
+  /* display: flex;
+  justify-content: space-evenly; */
+  /* margin: auto; */
+  text-align: center;
+}
+
+.Times input {
+  padding-left: 8px;
+  font-size: 18px;
+  margin: 5px;
+  font-family: Circular;
+}
+
+.Deals {
+  width: 100%;
+  margin: auto;
+}
+
+.Deals input {
+  width: 80%;
+  padding: 5px;
+  margin: 5px;
 }
