--- a/src/components/Deals/Deal/Deal.css
+++ b/src/components/Deals/Deal/Deal.css
@@ -45,9 +45,13 @@
 
 .Edit {
   position: absolute;
-  top: 10px;
-  right: 0px; 
+  top: 15px;
+  right: 5px; 
   width: 30px;
+}
+
+.Edit:hover {
+  width: 35px;
 }
 
 @media screen and (max-width: 700px) {
