--- a/src/components/Deals/EditingDeal/EditingDeal.css
+++ b/src/components/Deals/EditingDeal/EditingDeal.css
@@ -11,6 +11,17 @@
   font-size: 26px;
 }
 
+.EditingDeal h3 {
+  font-family: Circular-Bold;
+  margin: 0 0 10px;
+  padding: 10px;
+  font-size: 20px;
+  border-top: solid rgba(0, 0, 0, 0.166) 1px;
+  text-align: center;
+  margin-top: 25px;
+  /* width: 80%; */
+}
+
 .EditingDeal footer {
   position: relative;
   display: flex;
@@ -19,6 +30,8 @@
   width: 100%;
   margin: 0;
   padding: 10px 0 0;
+  /* border-top: solid rgba(0, 0, 0, 0.098) 1px; */
+  margin-top: 25px;
 }
 
 .Times {
@@ -41,7 +54,55 @@
 }
 
 .Deals input {
-  width: 80%;
-  padding: 5px;
+  width: 85%;
+  padding: 6px;
   margin: 5px;
+  border: solid rgba(0, 0, 0, 0.276) 1px;
+  border-radius: 2px;
+  background-color: rgb(255, 255, 255);
+}
+
+.Deals input:focus{
+  outline: none !important;
+  border:1px solid #ffbc2c;
+  box-shadow: 0 0 10px #ffaf04;
+}
+
+.AddDeal {
+  width: 25px;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+.AddDeal:hover {
+  width: 28px;
+}
+
+/* Close Button Styling */
+
+.Close {
+  position: absolute;
+  right: 40px;
+  /* top: 32px; */
+  width: 25px;
+  height: 25px;
+  opacity: 0.4;
+  margin-top: 5px;
+}
+.Close:hover {
+  opacity: 1;
+}
+.Close:before, .Close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 25px;
+  width: 2px;
+  background-color: rgb(24, 24, 24);
+}
+.Close:before {
+  transform: rotate(45deg);
+}
+.Close:after {
+  transform: rotate(-45deg);
 }
