--- a/src/components/Deals/Deal/Deal.css
+++ b/src/components/Deals/Deal/Deal.css
@@ -36,7 +36,7 @@
 .Deal {
   color: rgb(72, 72, 72);
   padding-top: 20px;
-  border-top: 1px solid rgb(202, 202, 202);
+  /* border-top: 1px solid rgb(202, 202, 202); */
   margin-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 0px;
