--- a/src/components/Deals/Deal/Deal.css
+++ b/src/components/Deals/Deal/Deal.css
@@ -4,6 +4,7 @@
   border: none;
   background-color: rgba(221, 221, 221, 0.966);
   padding: 5px 10px;
+  margin-bottom: 15px;
   text-align: center;
   display: inline-block;
   border-radius: 2px;
@@ -46,12 +47,26 @@
 .Edit {
   position: absolute;
   top: 15px;
-  right: 5px; 
+  right: 55px; 
   width: 30px;
 }
 
 .Edit:hover {
   width: 35px;
+}
+
+.Delete {
+  position: absolute;
+  top: 17px;
+  right: 5px; 
+  width: 30px;
+  height: 29px;
+
+}
+
+.Delete:hover {
+  width: 35px;
+  height: 35px;
 }
 
 @media screen and (max-width: 700px) {
