--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
@@ -1,6 +1,7 @@
 .LocationDetailItems {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
   /* justify-content: space-between; */
   flex-wrap: wrap;
   /* width: 90%; */
