--- a/src/components/Deals/Deal/Deal.css
+++ b/src/components/Deals/Deal/Deal.css
@@ -1,14 +1,25 @@
+.Deal {
+  position: relative;
+  background-color: rgb(242, 242, 242);
+  padding: 10px;
+  border-radius: 8px;
+  color: rgb(72, 72, 72);
+  padding-top: 20px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 12px;
+}
+
 .Time {
   font-family: Circular-bold;
   padding-bottom: 10px;
   border: none;
-  background-color: rgba(221, 221, 221, 0.966);
+  background-color: rgba(123, 201, 111, 0.817);
   padding: 5px 10px;
   margin-bottom: 15px;
   text-align: center;
   display: inline-block;
   border-radius: 2px;
-  /* margin-left: 10px; */
   font-size: 16px;
 }
 
@@ -52,39 +63,33 @@
   font-size: 20px;
 }
 
-.Deal {
-  color: rgb(72, 72, 72);
-  padding-top: 20px;
-  /* border-top: 1px solid rgb(202, 202, 202); */
-  margin-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 0px;
-  position: relative;
-}
-
 .Edit {
   position: absolute;
-  top: 15px;
-  right: 55px; 
-  width: 30px;
+  top: 19px;
+  right: 60px; 
+  width: 25px;
+  padding: 6px;
+  border-radius: 10px;
+  transition: ease 0.5s;
 }
 
 .Edit:hover {
-  width: 35px;
+  background-color: rgba(148, 208, 122, 0.879);
 }
 
 .Delete {
   position: absolute;
-  top: 17px;
-  right: 5px; 
-  width: 30px;
-  height: 29px;
-
+  top: 20px;
+  right: 20px; 
+  width: 25px;
+  height: 24px;
+  padding: 6px;
+  border-radius: 10px;
+  transition: ease 0.5s;
 }
 
 .Delete:hover {
-  width: 35px;
-  height: 35px;
+  background-color: rgba(208, 122, 122, 0.879);
 }
 
 @media screen and (max-width: 700px) {
