--- a/src/components/Deals/EditingDeal/EditingDeal.css
+++ b/src/components/Deals/EditingDeal/EditingDeal.css
@@ -19,7 +19,6 @@
   border-top: solid rgba(0, 0, 0, 0.166) 1px;
   text-align: center;
   margin-top: 25px;
-  /* width: 80%; */
 }
 
 .EditingDeal footer {
@@ -30,14 +29,10 @@
   width: 100%;
   margin: 0;
   padding: 10px 0 0;
-  /* border-top: solid rgba(0, 0, 0, 0.098) 1px; */
   margin-top: 25px;
 }
 
 .Times {
-  /* display: flex;
-  justify-content: space-evenly; */
-  /* margin: auto; */
   text-align: center;
 }
 
@@ -46,6 +41,11 @@
   font-size: 18px;
   margin: 5px;
   font-family: Circular;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(227, 227, 227);
+  text-align: center;
 }
 
 .Deals {
@@ -57,11 +57,14 @@
   font-family: Circular;
   font-size: 16px;
   width: 85%;
-  padding: 6px;
   margin: 5px;
   border: solid rgba(0, 0, 0, 0.276) 1px;
   border-radius: 2px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(238, 238, 238);
+
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
 }
 
 .Deals input:focus{
@@ -74,9 +77,7 @@
   background-color: white;
   border: none;
   font-size: 35px;
-  /* width: 18px; */
   padding: 5px;
-  /* margin-top: 10px; */
 }
 
 .AddDeal:hover {
@@ -93,7 +94,6 @@
 .Close {
   position: absolute;
   right: 40px;
-  /* top: 32px; */
   width: 25px;
   height: 25px;
   opacity: 0.4;
