--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
@@ -8,22 +8,24 @@
 }
 
 .LocationDetailItem h2 {
-  font-size: 22px;
+  font-size: 19px;
   margin: auto;
   margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 .LocationDetailItem input {
   margin: auto;
-  font-size: 20px;
+  font-size: 19px;
   margin-top: 12px;
   padding: 5px;
   border: white solid 1px;
   border-radius: 3px;
   box-shadow: 0 0 1px #b8b8b8;
-  min-width: 90%;
+  min-width: 95%;
   border:1px solid #ffbc2c79;
   box-shadow: 0 0 5px #ffbc2c9e;
+  margin-bottom: 5px;
 }
 
 .LocationDetailItem input:focus{
@@ -36,14 +38,11 @@
   font-family: Circular-bold;
   padding-bottom: 10px;
   border: none;
-  /* background-color: hsla(0,0%,87%,.966); */
-  /* background-color: rgb(128, 128, 128); */
   background-color: #f4b42c;
   color: rgb(255, 255, 255);
   padding: 5px 10px;
   text-align: center;
   display: inline-block;
   border-radius: 2px;
-  margin-top: 5px;
-  margin-top: 20px;
+  /* margin-top: 10px; */
 }
