--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItems.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   margin-top: 20px;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
-  /* width: 90%; */
+  background-color: rgb(242, 242, 242);
+  padding: 15px;
+  padding-bottom: 40px;
+  border-radius: 10px;
 }
