--- a/src/components/UI/Backdrop/Backdrop.css
+++ b/src/components/UI/Backdrop/Backdrop.css
@@ -5,6 +5,6 @@
   z-index: 250;
   left: 0;
   top: 0;
-  background-color: rgba(0,0,0,0.5);
-  backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.612);
+  /* backdrop-filter: blur(1px); */
 }
