--- a/src/components/SuperUser/SuperUser.css
+++ b/src/components/SuperUser/SuperUser.css
@@ -12,6 +12,11 @@
   background-color: rgb(227, 227, 227);
   text-align: center;
 }
+.SuperUser input:focus {
+  outline: none !important;
+  border:1px solid #ffbc2c;
+  box-shadow: 0 0 10px #ffaf04;
+}
 
 .AddDealButton {
   /* float: right; */
