Add deals form validation and stats icon

--- a/src/components/Deals/EditingDeal/EditingDeal.css
+++ b/src/components/Deals/EditingDeal/EditingDeal.css
@@ -116,3 +116,10 @@
 .Close:after {
   transform: rotate(-45deg);
 }
+
+.ErrorMessage {
+  font-size: 18px;
+  color: rgb(255, 50, 50);
+  text-align: center;
+  margin: 15px 0px;
+}
