--- a/src/components/LocationDetails/LocationDetails.css
+++ b/src/components/LocationDetails/LocationDetails.css
@@ -7,7 +7,7 @@
 }
 
 .LocationDetails h1 {
-  font-size: 25px;
+  font-size: 28px;
   font-family: Circular-bold;
   margin: auto;
 }
@@ -34,4 +34,11 @@
 .SaveCancelButtons {
   float: right;
   margin-top: 20px;
+}
+
+.ErrorMessage {
+  font-size: 18px;
+  color: rgb(255, 50, 50);
+  text-align: center;
+  margin: 15px 0px;
 }
