--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -7,18 +7,20 @@
 .Label {
   font-weight: bold;
   display: block;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 
 .InputElement {
   outline: none;
   border: 1px solid #ccc;
+  border-radius: 5px;
   background-color: white;
   font: inherit;
   padding: 6px 10px;
   display: block;
   width: 100%;
   box-sizing: border-box;
+  /* text-align: center; */
 }
 
 .InputElement:focus {
