--- a/src/containers/Auth/Auth.css
+++ b/src/containers/Auth/Auth.css
@@ -1,15 +1,59 @@
 .Auth {
-  margin: 20px auto;
-  width: 80%;
   text-align: center;
-  box-shadow: 0 2px 3px #ccc;
-  border: 1px solid #eee;
-  padding: 10px;
+  margin: auto;
+}
+
+.BackgroundImage {
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: grayscale(30%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -100;
+}
+
+.Logo {
+  height: 130px;
+  margin: auto;
+}
+
+.Button {
+  font-family: Circular;
+  font-size: 14px;
+  padding: 5px 15px;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(239, 154, 58);
+  color: white;
+}
+
+.Button:hover {
+  background-color: rgba(239, 155, 58, 0.642);
+}
+
+.AuthForm {
+  margin: auto;
+  margin-top: 25vh;
+  width: 80%;
+  z-index: 500;
+  background-color: white;
+  /* border: 1px solid #ccc; */
+  padding: 20px 30px 30px 30px;
   box-sizing: border-box;
+  font-size: 16px;
+  border-radius: 4px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  height: auto;
 }
 
 @media (min-width: 600px) {
   .Auth {
-      width: 500px;
+    width: 500px;
   }
 }
