--- a/src/components/SuperUser/SuperUser.css
+++ b/src/components/SuperUser/SuperUser.css
@@ -4,12 +4,12 @@
 }
 
 .SuperUser input {
-  width: 50%;
+  width: 400px;
   padding: 5px;
   font-size: 20px;
   border-radius: 5px;
   border: none;
-  background-color: rgb(227, 227, 227);
+  background-color: rgb(236, 236, 236);
   text-align: center;
 }
 .SuperUser input:focus {
@@ -21,4 +21,21 @@
 .AddDealButton {
   /* float: right; */
   margin-top: 30px;
+}
+
+.ResultWrapper {
+  margin-top: 40px;
+}
+
+.Result {
+  padding: 10px;
+  width: 400px;
+  margin: auto;
+  margin-top: 10px;
+  font-size: 20px;
+  background-color: whitesmoke;
+}
+
+.Result:hover {
+  background-color: rgb(181, 181, 181);
 }
