Make auth page picture full size

--- a/src/containers/Auth/Auth.css
+++ b/src/containers/Auth/Auth.css
@@ -1,38 +1,67 @@
 .Auth {
   text-align: center;
-  margin: auto;
-}
-
-.BackgroundImage {
-  /* Full height */
-  /* Center and scale the image nicely */
-  background-position: center;
+  /* margin: auto; */
+  background-image: url('../../assets/images/resize_bg.jpg');
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
-  /* filter: grayscale(30%); */
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -100;
-  width: 100%;
+  height: 100vh;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .BackgroundOverlay {
-  position: fixed; /* Sit on top of the page content */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+  position: fixed;
+  /* Sit on top of the page content */
+  width: 100%;
+  /* Full width (cover the whole page) */
+  height: 100%;
+  /* Full height (cover the whole page) */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.19); /* Black background with opacity */
-  z-index: -2; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
-  /* z-index: 200; */
+  background-color: rgba(0, 0, 0, 0.19);
+  /* Black background with opacity */
+  z-index: 100;
+  /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer;
+  /* Add a pointer on hover */
+}
+
+.AuthForm {
+  display: inline-block;
+  margin-top: 25vh;
+  z-index: 500;
+  background-color: white;
+  padding: 20px 30px 30px 30px;
+  box-sizing: border-box;
+  font-size: 16px;
+  border-radius: 4px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  height: auto;
+  width: 400px;
+}
+
+.BackgroundImage {
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -100;
+  width: 100%; */
+  /* Background image doesn't tile */
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  /* This is what makes the background image rescale based
+     on the container's size */
 }
 
 .Logo {
-  height: 130px;
+  height: 140px;
   margin: auto;
 }
 
@@ -49,22 +78,6 @@
 
 .Button:hover {
   background-color: rgba(239, 155, 58, 0.642);
-}
-
-.AuthForm {
-  margin: auto;
-  margin-top: 25vh;
-  width: 80%;
-  z-index: 500;
-  background-color: white;
-  /* border: 1px solid #ccc; */
-  padding: 20px 30px 30px 30px;
-  box-sizing: border-box;
-  font-size: 16px;
-  border-radius: 4px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
-  height: auto;
-  width: 500px;
 }
 
 /* @media (min-width: 200px) {
