--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -20,7 +20,7 @@
   display: block;
   width: 100%;
   box-sizing: border-box;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .InputElement:focus {
