--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
@@ -1,17 +1,15 @@
 .LocationDetailItem {
   padding: 10px;
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-evenly; */
-  /* flex: 40%; */
-  width: 100%;
+  /* background-color: white; */
+  border-radius: 10px;
+  margin-right: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .LocationDetailItem h2 {
   font-size: 19px;
   margin: auto;
-  margin-top: 15px;
-  margin-bottom: 5px;
+  margin-top: 20px;
 }
 
 .LocationDetailItem input {
@@ -44,5 +42,10 @@
   text-align: center;
   display: inline-block;
   border-radius: 2px;
-  /* margin-top: 10px; */
+}
+
+@media (max-width: 400px) {
+  .LocationDetailItem h2 {
+    font-size: 18px;
+  }
 }
