--- a/src/containers/Layout/Layout.css
+++ b/src/containers/Layout/Layout.css
@@ -1,10 +1,12 @@
 .Content {
-    margin: auto;
-    margin-top: 120px;
+  margin: auto;
+  padding-left: 220px;
+  margin-top: 120px;
 }
 
-@media (min-width: 500px) {
-    .Content {
-        padding-left: 220px;
-    }
+@media (max-width: 500px) {
+  .Content {
+    margin-top: 80px;
+    padding-left: 0px;
+  }
 }
