--- a/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
+++ b/src/components/LocationDetails/LocationDetailItems/LocationDetailItem/LocationDetailItem.css
@@ -3,7 +3,7 @@
   /* background-color: white; */
   border-radius: 10px;
   margin-right: 20px;
-  /* margin-bottom: 20px; */
+  margin-bottom: 5px;
 }
 
 .LocationDetailItem h2 {
