--- a/src/components/DefaultView/DefaultView.css
+++ b/src/components/DefaultView/DefaultView.css
@@ -1,11 +1,10 @@
 .DefaultView {
   text-align: center;
-  font-size: 40px;
 }
 
 .HeaderImage {
   filter: grayscale(40%);
-  position: fixed;
+  position: absolute;
   top: 50px;
   left: 0;
   z-index: -100;
@@ -49,7 +48,7 @@
 @media (max-width: 500px) {
   .DefaultView {
     margin: auto;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     font-size: 30px;
     width: 80%;
   }
@@ -62,6 +61,7 @@
     font-size: 55px;
   }
   .DefaultView h3 {
+    margin-top: 50px;
     font-size: 25px;
     color: white;
   }
@@ -76,7 +76,6 @@
 
 @media (min-width: 501px) {
   .DefaultView {
-    margin-top: 150px;
   }
   .HeaderImage {
     background: url('../../assets/images/background_img1.jpg');
@@ -84,19 +83,23 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 500px;
-    width: 100%;
+    height: 400px;
+    width: -webkit-calc(100% - 220px);
+    width:    -moz-calc(100% - 220px);
+    width:         calc(100% - 220px);
+    margin-left: 220px;
+  }
+  .ButtonLinks {
   }
   .DefaultView h2 {
-    top: 250px;
-    /* left: auto; */
-    max-width: 1000px;
-    position: absolute;
+    font-size: 50px;
+    margin: auto;
+    margin-top: 100px;
     text-align: center;
-    width: 100%;
+    max-width: 1000px;
   }
   .DefaultView h3 {
-    margin-top: 500px;
+    margin-top: 150px;
     font-size: 25px;
   }
   .Button {
