--- a/src/components/SuperUser/SuperUser.css
+++ b/src/components/SuperUser/SuperUser.css
@@ -1,4 +1,3 @@
-
 .SuperUser {
   background-color: rgb(226, 226, 226);
   padding: 20px;
@@ -17,7 +16,7 @@
 
 .SuperUser input:focus {
   outline: none !important;
-  border:1px solid #ffbc2c;
+  border: 1px solid #ffbc2c;
   box-shadow: 0 0 10px #ffaf04;
 }
 
@@ -38,6 +37,22 @@
   margin-top: 10px;
   font-size: 20px;
   background-color: rgb(255, 255, 255);
+  position: relative;
+}
+
+.deleteBar {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  color: gray;
+  cursor: pointer;
+}
+
+.deleteBar:hover {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  color: white;
 }
 
 .Result:hover {
